deployment/all-in-one/kubetoy-all-in-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubetoy-deployment
  labels:
    app: kubetoy-app
spec:
    selector:
      matchLabels:
        app: kubetoy
    replicas: 4
    template:
      metadata:
        labels:
          app: kubetoy
      spec:
        containers:
        - name: kubetoy
          image: tpneal/kubetoy:1.0
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
          volumeMounts:
          - name: configvol
            mountPath: /var/config
          - name: secretvol
            mountPath: /var/secret
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
        volumes:
        - name: configvol
          configMap:
            name: kubetoy-configmap-files
        - name: secretvol
          secret:
            secretName: kubetoy-secret-files
---
apiVersion: v1
kind: Service
metadata:
  name: kubetoy-service
  labels:
    app: kubetoy-app
spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 3000
      protocol: TCP
      name: "http"
  selector:
    app: kubetoy
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kubetoy
  labels:
    app: kubetoy-app
spec:
  to:
    kind: Service
    name: kubetoy-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
